--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/vue-fontawesome": "^2.0.10",
-    "bootstrap": "^5.3.1",
-    "bootstrap-vue": "^2.23.1",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "bootstrap": "^5.3.6",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
     "vanilla-tilt": "^1.8.1",
-    "vue": "^2.7.14"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -26,9 +27,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.3.4",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "eslint-plugin-vue": "^9.15.1"
   },
   "eslintConfig": {
     "root": true,
@@ -36,7 +37,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "parserOptions": {
